--- a/reference.bib
+++ b/reference.bib
@@ -7,3 +7,19 @@
   pages={570--576},
   year={2012}
 }
+@article{MCTSsurvey,
+  title={A survey of monte carlo tree search methods},
+  author={Browne, Cameron B and Powley, Edward and Whitehouse, Daniel and Lucas, Simon M and Cowling, Peter I and Rohlfshagen, Philipp and Tavener, Stephen and Perez, Diego and Samothrakis, Spyridon and Colton, Simon},
+  journal={IEEE Transactions on Computational Intelligence and AI in games},
+  volume={4},
+  number={1},
+  pages={1--43},
+  year={2012},
+  publisher={IEEE}
+}
+@article{coquelin2007bandit,
+  title={Bandit algorithms for tree search},
+  author={Coquelin, Pierre-Arnaud and Munos, R{\'e}mi},
+  journal={arXiv preprint cs/0703062},
+  year={2007}
+}
