--- a/reference.bib
+++ b/reference.bib
@@ -23,3 +23,35 @@
   journal={arXiv preprint cs/0703062},
   year={2007}
 }
+@article{tesauro1995temporal,
+  title={Temporal difference learning and TD-Gammon},
+  author={Tesauro, Gerald and others},
+  journal={Communications of the ACM},
+  volume={38},
+  number={3},
+  pages={58--68},
+  year={1995}
+}
+@article{tesauro1991practical,
+  title={Practical issues in temporal difference learning},
+  author={Tesauro, Gerald},
+  journal={Advances in neural information processing systems},
+  volume={4},
+  year={1991}
+}
+@INPROCEEDINGS{5035641,
+  author={Osaki, Yasuhiro and Shibahara, Kazutomo and Tajima, Yasuhiro and Kotani, Yoshiyuki},
+  booktitle={2008 IEEE Symposium On Computational Intelligence and Games}, 
+  title={An Othello evaluation function based on Temporal Difference Learning using probability of winning}, 
+  year={2008},
+  volume={},
+  number={},
+  pages={205-211},
+  keywords={Logic;Agriculture;Testing;Computational modeling;Optimization methods;Learning systems;Educational institutions},
+  doi={10.1109/CIG.2008.5035641}}
+@misc{auer2002finite,
+  title={Finite-time Analysis of the Multiarmed Bandit Problem},
+  author={Auer, P},
+  year={2002},
+  publisher={Kluwer Academic Publishers}
+}
